poll app is added

--- a/weatherapp/templates/weatherapp/index.html
+++ b/weatherapp/templates/weatherapp/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Weather !</title>
+    <title>Weatherapp !</title>
     <meta name="description" content="description"/>
     <meta name="author" content="author" />
     <meta name="keywords" content="keywords" />
-    <link rel="stylesheet" href="./stylesheet.css" type="text/css" />
+    <!-- <link rel="stylesheet" href="./stylesheet.css" type="text/css" /> -->
   </head>
   <body>
        <form method='POST'>
